--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: bundle install
 
+      - name: Run tests
+        run: bundle exec rake spec
+
       - name: Generate documentation
         run: |
           # Create necessary directories first
